pennel_div p 스타일 수정

--- a/src/pages/Profile/profile.module.css
+++ b/src/pages/Profile/profile.module.css
@@ -229,6 +229,14 @@
   place-items: start;
 }
 
+.pennel_div p {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 60px 0;
+  color: #7c7c7c;
+}
+
 .pennel_img_div {
   width: 106.5px;
   height: 106.5px;
@@ -292,6 +300,12 @@
 .likes img {
   width: 16px;
   height: 16px;
+}
+
+.pagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .pagination_container {
