--- a/src/pages/Home/components/popularposts.module.css
+++ b/src/pages/Home/components/popularposts.module.css
@@ -45,8 +45,8 @@
 }
 
 .post_item_img_container {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
 }
 
 .post_item_img_container > img {
@@ -57,8 +57,8 @@
 }
 
 .icon {
-  width: 14px;
-  height: 14px;
+  width: 12px;
+  height: 12px;
 }
 
 .post_item_info {
@@ -75,10 +75,11 @@
 
 .tag {
   color: #002daa;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .description {
+  font-size: 14px;
   display: -webkit-box;
   line-clamp: 1;
   -webkit-line-clamp: 1;
@@ -86,7 +87,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
-  line-height: 1.5rem;
+  line-height: 1.2rem;
 }
 
 .post_item_bottom {
@@ -94,7 +95,7 @@
   gap: 8px;
   align-items: center;
   font-size: 12px;
-  color: #4a4a4a;
+  color: #9f9f9f;
 }
 
 .post_item_bottom > span {
@@ -103,8 +104,8 @@
 }
 
 .post_item_bottom > span > img {
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   padding-right: 2px;
 }
 
@@ -117,4 +118,5 @@
 
 .nickname {
   font-size: 12px;
+  font-weight: bold;
 }
