캐러셀 인디케이터 위치 수정

--- a/src/components/UI/Carousel/carousel.module.css
+++ b/src/components/UI/Carousel/carousel.module.css
@@ -43,8 +43,9 @@
 .carouselIndicator {
   position: absolute;
   bottom: 20px;
-  left: 43%;
+  width: 100%;
   display: flex;
+  justify-content: center;
   gap: 8px;
 }
 
