--- a/src/pages/Profile/profile.module.css
+++ b/src/pages/Profile/profile.module.css
@@ -21,7 +21,7 @@
   gap: 20px;
   border-radius: 20px;
   box-shadow: 0px 2px 2px 2px rgb(201 201 201 / 37%);
-  width: 100%;
+  width: 280px;
 }
 
 .userUl_div {
@@ -215,6 +215,11 @@
   color: #fff;
 }
 
+.tabs_button.active {
+  background-color: #002daa;
+  color: #fff;
+}
+
 .tabs_img {
   width: 100%;
   height: 100%;
@@ -306,6 +311,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 30px;
 }
 
 .pagination_container {
